--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,90 @@
-# tmux powerline 
-run-shell "powerline-daemon -q" 
-source "/Users/masa/Library/Python/2.7/lib/python/site-packages/powerline/bindings/tmux/powerline.conf"
-set-option -g default-terminal screen-256color 
+# ---------------------------------------------------------
+# basic
+# ---------------------------------------------------------
+
+# tmux起動時のシェルをzshに
+set-option -g default-shell /bin/zsh
+
+# 256色表示可能に変更
+set-option -g default-terminal screen-256color
 set -g terminal-overrides 'xterm:colors=256'
+
+# PrefixをCtrl-1に変更
+set -g prefix C-q
+unbind C-b
+
+# ---------------------------------------------------------
+# status line
+# ---------------------------------------------------------
+
+# 更新する間隔を 1 秒
+set-option -g status-interval 1
+
+# window-status を中央揃えで配置
+set-option -g status-justify "centre"
+
+# status line の背景色を指定
+set-option -g status-bg "colour238"
+
+# status line の文字色を指定
+set-option -g status-fg "colour255"
+
+# statusの最大の長さを指定
+set-option -g status-left-length 20
+set-option -g status-right-length 60
+
+# status-left のフォーマットを指定
+set-option -g status-left "#[fg=colour255,bg=colour241]Session: #S #[default]"
+
+# status-right のフォーマットを指定
+set-option -g status-right "#[fg=colour255,bg=colour241] #h | LA: #(cut -d' ' -f-3 /proc/loadavg) | %m/%d %H:%M:%S#[default]"
+
+# window-status のフォーマットを指定
+set-window-option -g window-status-format " #I: #W "
+
+# カレントウィンドウの window-status のフォーマットを指定
+set-window-option -g window-status-current-format "#[fg=colour255,bg=colour27,bold] #I: #W #[default]"
+
+
+# ---------------------------------------------------------
+# mapping
+# ---------------------------------------------------------
+
+# vimのキーバインドでペインを移動
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# vimのキーバインドでペインをリサイズ
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
+# .tmux.confの読み込み
+bind-key r source-file ~/.tmux.conf\; display-message "$HOME/.tmux.conf reloaded!"
+
+# ---------------------------------------------------------
+# copy mode
+# ---------------------------------------------------------
+
+setw -g mode-keys vi
+
+# 'v' で選択開始
+bind -T copy-mode-vi v send -X begin-selection
+
+# 'V' で行選択
+bind -T copy-mode-vi V send -X select-line
+
+# 'C-v' で矩形選択
+bind -T copy-mode-vi C-v send -X rectangle-toggle
+
+# 'y' でヤンク
+bind -T copy-mode-vi y send -X copy-selection
+
+# 'Y' で行ヤンク
+bind -T copy-mode-vi Y send -X copy-line
+
+# 'C-p'でペースト
+bind-key C-p paste-buffer
