--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,17 @@
 # ---------------------------------------------------------
+# plugin
+# ---------------------------------------------------------
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'dracula/tmux'
+set -g @dracula-plugins "battery cpu-usage ram-usage weather time"
+#set -g @dracula-cpu-usage-colors "pink dark_gray"
+
+# ---------------------------------------------------------
 # basic
 # ---------------------------------------------------------
 
@@ -9,58 +22,13 @@ set-option -g default-shell /bin/zsh
 set-option -g default-terminal screen-256color
 set -g terminal-overrides 'xterm:colors=256'
 
-# PrefixをCtrl-1に変更
+# PrefixをCtrl-qに変更
 set -g prefix C-q
 unbind C-b
 
 # ---------------------------------------------------------
-# status line
-# ---------------------------------------------------------
-
-# 更新する間隔を 1 秒
-set-option -g status-interval 1
-
-# window-status を中央揃えで配置
-set-option -g status-justify "centre"
-
-# status line の背景色を指定
-set-option -g status-bg "colour238"
-
-# status line の文字色を指定
-set-option -g status-fg "colour255"
-
-# statusの最大の長さを指定
-set-option -g status-left-length 20
-set-option -g status-right-length 60
-
-# status-left のフォーマットを指定
-set-option -g status-left "#[fg=colour255,bg=colour241]Session: #S #[default]"
-
-# status-right のフォーマットを指定
-set-option -g status-right "#[fg=colour255,bg=colour241] #h | LA: #(cut -d' ' -f-3 /proc/loadavg) | %m/%d %H:%M:%S#[default]"
-
-# window-status のフォーマットを指定
-set-window-option -g window-status-format " #I: #W "
-
-# カレントウィンドウの window-status のフォーマットを指定
-set-window-option -g window-status-current-format "#[fg=colour255,bg=colour27,bold] #I: #W #[default]"
-
-
-# ---------------------------------------------------------
 # mapping
 # ---------------------------------------------------------
-
-# vimのキーバインドでペインを移動
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-# vimのキーバインドでペインをリサイズ
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
 
 # .tmux.confの読み込み
 bind-key r source-file ~/.tmux.conf\; display-message "$HOME/.tmux.conf reloaded!"
@@ -71,20 +39,20 @@ bind-key r source-file ~/.tmux.conf\; display-message "$HOME/.tmux.conf reloaded
 
 setw -g mode-keys vi
 
-# 'v' で選択開始
-bind -T copy-mode-vi v send -X begin-selection
+# ---------------------------------------------------------
+# status bar
+# ---------------------------------------------------------
 
-# 'V' で行選択
-bind -T copy-mode-vi V send -X select-line
+# dracula options
+set -g @dracula-left-icon-padding 2
+set -g @dracula-show-location false
+set -g @dracula-show-fahrenheit false
+set -g @dracula-show-timezone false
+set -g @dracula-show-flags true
+set -g @dracula-military-time true
 
-# 'C-v' で矩形選択
-bind -T copy-mode-vi C-v send -X rectangle-toggle
+# ---------------------------------------------------------
+# initialize tmux plugin manager
+# ---------------------------------------------------------
 
-# 'y' でヤンク
-bind -T copy-mode-vi y send -X copy-selection
-
-# 'Y' で行ヤンク
-bind -T copy-mode-vi Y send -X copy-line
-
-# 'C-p'でペースト
-bind-key C-p paste-buffer
+run '~/.tmux/plugins/tpm/tpm'
