update pane border

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,6 +25,9 @@ set -g terminal-overrides 'xterm:colors=256'
 set -g prefix C-q
 unbind C-b
 
+# ペインのボーダーを点線に変更
+set -g pane-border-lines simple
+
 # ---------------------------------------------------------
 # mapping
 # ---------------------------------------------------------
