--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,6 +29,15 @@ unbind C-b
 set -g pane-border-lines simple
 
 # ---------------------------------------------------------
+# pane
+# ---------------------------------------------------------
+
+bind -n C-k select-pane -U
+bind -n C-j select-pane -D
+bind -n C-h select-pane -L
+bind -n C-l select-pane -R
+
+# ---------------------------------------------------------
 # mapping
 # ---------------------------------------------------------
 
