--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -22,7 +22,7 @@ set-option -g default-terminal screen-256color
 set -g terminal-overrides 'xterm:colors=256'
 
 # PrefixをCtrl-qに変更
-set -g prefix C-q
+set -g prefix C-t
 unbind C-b
 
 # ペインのボーダーを点線に変更
@@ -36,6 +36,13 @@ bind -n C-k select-pane -U
 bind -n C-j select-pane -D
 bind -n C-h select-pane -L
 bind -n C-l select-pane -R
+
+# ---------------------------------------------------------
+# window
+# ---------------------------------------------------------
+
+bind-key -n C-S-Left previous-window
+bind-key -n C-S-Right next-window
 
 # ---------------------------------------------------------
 # mapping
