add tmux poweline

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,8 +7,6 @@ set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'dracula/tmux'
-set -g @dracula-plugins "battery cpu-usage ram-usage weather time"
 
 # ---------------------------------------------------------
 # basic
@@ -61,13 +59,8 @@ setw -g mode-keys vi
 # status bar
 # ---------------------------------------------------------
 
-# dracula options
-set -g @dracula-left-icon-padding 2
-set -g @dracula-show-location false
-set -g @dracula-show-fahrenheit false
-set -g @dracula-show-timezone false
-set -g @dracula-show-flags true
-set -g @dracula-military-time true
+source "/usr/local/lib/python3.9/site-packages/powerline/bindings/tmux/powerline.conf"
+run-shell "powerline-daemon -q"
 
 # ---------------------------------------------------------
 # initialize tmux plugin manager
