--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -30,10 +30,10 @@ set -g pane-border-lines simple
 # pane
 # ---------------------------------------------------------
 
-bind -n C-k select-pane -U
-bind -n C-j select-pane -D
-bind -n C-h select-pane -L
-bind -n C-l select-pane -R
+#bind -n C-k select-pane -U
+#bind -n C-j select-pane -D
+#bind -n C-h select-pane -L
+#bind -n C-l select-pane -R
 
 # ---------------------------------------------------------
 # window
