Change tmux theme to nord-tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,6 +7,8 @@ set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-cpu'
 
 # ---------------------------------------------------------
 # basic
@@ -59,8 +61,16 @@ setw -g mode-keys vi
 # status bar
 # ---------------------------------------------------------
 
-source "/usr/local/lib/python3.9/site-packages/powerline/bindings/tmux/powerline.conf"
-run-shell "powerline-daemon -q"
+run-shell "~/dotfiles/tmux/themes/nord-tmux/nord.tmux"
+
+set -g status-left-length 60
+set -g status-right-length 60
+
+set -g status-right "#{prefix_highlight}#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] CPU: #{cpu_percentage} #[fg=white,bg=brightblack,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] %Y-%m-%d (%a) #[fg=white,bg=brightblack,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] %H:%M #[fg=cyan,bg=brightblack,nobold,noitalics,nounderscore]#[fg=black,bg=cyan,bold] #(who | cut -d \" \" -f1) "
+
+set -g window-status-format "#[fg=black,bg=brightblack,nobold,noitalics,nounderscore] #[fg=white,bg=brightblack]#I #[fg=white,bg=brightblack,nobold,noitalics,nounderscore] #[fg=white,bg=brightblack]#W #[fg=brightblack,bg=black,nobold,noitalics,nounderscore]"
+set -g window-status-current-format "#[fg=black,bg=cyan,nobold,noitalics,nounderscore] #[fg=black,bg=cyan]#I #[fg=black,bg=cyan,nobold,noitalics,nounderscore] #[fg=black,bg=cyan]#W #[fg=cyan,bg=black,nobold,noitalics,nounderscore]"
+set -g window-status-separator ""
 
 # ---------------------------------------------------------
 # initialize tmux plugin manager
