--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -22,7 +22,7 @@ set-option -g default-terminal screen-256color
 set -g terminal-overrides 'xterm:colors=256'
 
 # PrefixをCtrl-qに変更
-set -g prefix C-q
+set -g prefix C-space
 unbind C-b
 
 # ペインのボーダーを点線に変更
